--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-pwa": "^5.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-typed": "^1.2.0",
     "styled-components": "^5.2.1",
     "webpack": "4"
   },
